2006-09-28  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/trackback.rb (Trackback::notify_by_mail): likewise.
	* donrails/app/models/comment.rb (Comment::notify_by_mail): Fix to send comment mail.

	
	* donrails/app/models/ping.rb (Ping::send_ping2): Change to call send_ping_xmlrpc. If it fails, call send_ping_rest.
	(Ping::send_ping_rest): Rename send_ping2 to send_ping_rest. And refine it.
	(Ping::send_ping_xmlrpc): New method.

	* donrails/app/apis/don_web_service.rb (DonWebServiceStructs): likewise.
	(DonWebApi): likewise.
	(DonWebService::ping): likewise.

	* donrails/test/unit/ping_test.rb (PingTest::test_send_ping_xmlrpc): Apply for sending XML-RPC ping.

2006-09-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/lib/antispam.rb: Cleanup. Remove "[SP]" info in log.

	* NEW Feature: XML-RPC for blog client. (Tested by MS windows live writer.)
	* donrails/app/models/author.rb 
	(Author::self.authenticate): Add for XML-RPC.
	(Author::self.authenticate): likewise.
	* donrails/app/controllers/backend_controller.rb: likewise.
	* donrails/app/apis/don_web_service.rb: likewise.
	* donrails/app/apis/movable_type_service.rb: likewise.
	* donrails/app/apis/blogger_service.rb: likewise.
	* donrails/app/apis/meta_weblog_service.rb: likewise.
	
2006-09-26  ARAKI Yasuhiro  <yasu@debian.or.jp>
	
	* donrails/app/controllers/atom_controller.rb (AtomController::post): Fix to apply enrollment.

2006-09-26  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/shared/MT/trackback.rhtml: implemented.

	* donrails/app/views/shared/MT/comment.rhtml:
	* donrails/app/views/shared/MT/simple-trackback.rhtml:
	* donrails/app/views/shared/MT/simple-comment.rhtml: add an anchor.

2006-09-25  Akira TAGOH  <at@gclab.org>

	* donrails/app/models/trackback.rb (Trackback::notify_by_mail):
	don't send email if no ADMIN_MAILADD defined.

	* donrails/app/views/notes/MT/show_enrollment.rhtml:
	* donrails/app/views/notes/MT/show_title.rhtml: updated to follow
	noteslist.rhtml.
